# pgvector-rag

./: .gitignore  README.md  compose.yml  pyproject.toml
pgvector_rag/: __init__.py
tests/: test_rag.py
